# find-projects

./: projects_info.json  pyproject.toml
find_projects/: analyse.py
